# anamorphic_tester

./: .gitignore  README.md  pyproject.toml
anamorph_fit/: __init__.py  __main__.py  basis.py  cli.py  fit.py  io.py
examples/: quickstart.md  sample_anamorphic.csv  sample_quadoa.json
quadoa/: client.py
tests/: conftest.py  test_cli.py  test_fit.py  test_full_suite.py  test_hello_world.py  test_io.py  test_quadoa_integration.py
tools/: extract_quadoa_schema.py
